force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The date when the customer contract is expected to begin.</description>
    <inlineHelpText>The date when the customer contract is expected to begin.</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>