force-app/main/default/objects/Opportunity/fields/Deal_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Health_Score__c</fullName>
    <description>Indicates the overall health of the deal based on rep assessment.</description>
    <inlineHelpText>Indicates the overall health of the deal based on rep assessment.</inlineHelpText>
    <label>Deal Health Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>