force-app/main/default/objects/Opportunity/fields/Expected_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contract_Value__c</fullName>
    <description>The anticipated total value of the signed contract.</description>
    <inlineHelpText>The anticipated total value of the signed contract.</inlineHelpText>
    <label>Expected Contract Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>