force-app/main/default/objects/Opportunity/fields/HighValueOpportunity__c.field-meta.xml
<CustomField>
    <fullName>HighValueOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically set to TRUE when the Opportunity Amount is greater than or equal to 100,000 USD. Used for high value opportunity reporting and identification.</description>
    <label>High Value Opportunity</label>
    <type>Checkbox</type>
</CustomField>