force-app/main/default/objects/Opportunity/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <description>Enter the main competitor involved in this opportunity.</description>
    <inlineHelpText>Enter the main competitor involved in this opportunity.</inlineHelpText>
    <label>Primary Competitor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>