force-app/main/default/objects/Opportunity/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick if this opportunity relates to a contract renewal.</description>
    <inlineHelpText>Tick if this opportunity relates to a contract renewal.</inlineHelpText>
    <label>Renewal Opportunity</label>
    <type>Checkbox</type>
</CustomField>