force-app/main/default/objects/Opportunity/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <businessProcess>Channel Sales Process</businessProcess>
    <description>Opportunities created by or for distributors.</description>
    <label>Distributor</label>
</RecordType>